update onetalk chatbubbles project and music remote

--- a/index.html
+++ b/index.html
@@ -564,39 +564,38 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">OneTalk Messenger<br>Chat Bubbles</h2>
-                  <p class="item-intro text-muted">OneTalk optimizes the voice recognition technology to make mobile communication faster & “lazier”. Chat Bubbles is the main feature on OneTalk to achieve this goal.</p>
+                  <p class="item-intro text-muted">OneTalk optimizes the voice recognition technology to make mobile communication faster & “lazier”. Chat Bubbles save time for users and makes replying messages much easier.</p>
                   <ul class="list-inline">
                     <li>Role：Product Management | UX Design | UI Design | </li>
-                    <li>Type：Android & iOS Application</li>
+                    <li>Type：Android Application</li>
                     <li>Award：Google Play The Most Innovative App of 2017</li>
                     <li><a href="https://goo.gl/eyRL2Z">Try it on Google Play Store</a></li>
                   </ul>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-game.png" alt="">
                   <br>
-                  <h3>Why OneTalk ChatBubbles?</h3>
-                  <ul class="list-inline">
-                    <li>1. Keep conversation going while gaming or watching video</li>
-                    <li>2. Voice typing is the most natural input method</li>
-                    <li>3. Reply different instant messages such as Messenger</li>
-                    <li>4. Auto speak new messages & Push to talk</li>
-                    <li>5. Customized canned response and tex face</li>
                   </ul>
                   <div class="embed-responsive embed-responsive-16by9">
                     <iframe src="https://www.youtube.com/embed/CoSjIopig3g" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <br>
                   <br>
-                  <h3>Early Stage - Improve current voice messaging experience</h3>
+                  <h3>Background</h3>
+                  <p>As a startup company, we started this idea from our own needs. “Too lazy to type on the phone.” “Sometimes I want to keep my hands-free”. This is where we start to do the work for this application.</p>
+                  <h3>Early Stage - Improve Current Voice Messaging Experience</h3>
                   <p>At the very beginning, we applied current speech recognition services, and try to optimize the usability while sending voice messages. People send message in two ways. One is only text and if they are not able to type, they send voice message. However, sender and receiver won’t be at the same environment. They might not be able to type by hand or hear your voice on speaker. So why not put both text and voice together? To hear the voice is also better to understand the emotion of a person. Eliminate the misunderstanding on message.</p>
                   <h5>Transcribe voice to text completes the messaging experience.</h5>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/stage1_01.png" alt="">
-                  <h5>We also add some feature to make sending messaages easier.</h5>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/stage1_02.png" alt="">
-                  <h3>Stage Two - Expand the voice typing use case</h3>
-                  <p>From one of our user feedbacks on Google Play, he asked if he can use our service even leave the app, such as gaming. So we start to move the experience outside the app. And our the Chat Bubbles starts from here.</p>
-                  <h3>Stage Three - Bring instant messengers all together with OneTalk</h3>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01_stage1.png" alt="">
+                  <h5>We also add some features to make sending messaages easier.</h5>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01_stage1-1.png" alt="">
+                  <h3>Expand Voice Typing Use Case</h3>
+                  <p>From one of our user feedbacks on Google Play, he asked if he can use our service while leaving OneTalk, such as gaming. So we start to move the experience outside the app. So the Chat Bubbles feature started from here.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01_stage2.png" alt="">
+                  <h3>Bring Instant Messengers All Together with OneTalk</h3>
                   <p>People got all different instant messengers on their phone. It’s a hassle to reply messages by switching between different messaging apps. We found a solution to reply all incoming messages by OneTalk Chat Bubbles for major IM. This made Chat Bubbles much more useful and it also help us to promote our app when replying.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/stage3.png" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01_stage3.png" alt="">
+                  <h3>Iterations</h3>
+                  <p>After main feature had been locked down, we focuesed on optimize the usability of Chat Bubbles. We tracked Google Anaylisis data to iterate the hierachy of function. We also added canned response to let users reply messages even faster.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01_stage4.png" alt="">
                   <!-- <p><a class="portfolio-link" data-toggle="modal" data-dismiss="modal" href="#portfolioModal2">Next Project</a><p>
                   -->
                   <button class="btn" type="button" onclick="$('#portfolioModal1').one('hidden.bs.modal', function() { $('#portfolioModal2').modal('show'); }).modal('toggle');">Next Project</button>
@@ -650,6 +649,7 @@
                   <br>
                   <br>
                   <h3>Process</h3>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02_use case.png" alt="">
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
