music remote update

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -103,7 +103,7 @@
               <p class="text-muted">Google Play Best of 2017</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -113,11 +113,11 @@
               <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>OneTalk Music Remote</h4>
-              <p class="text-muted">AI ChatBot Design</p>
+              <h4>OneTalk Bot</h4>
+              <p class="text-muted">Chatbot Design Case Study</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -127,11 +127,12 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>ASUS MiniMovie</h4>
-              <p class="text-muted">Zenphone movie editor</p>
+              <h4>ASUS ZenUI</h4>
+              <p class="text-muted">Zenphone Multimedia Apps</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <!--
+          <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -145,7 +146,7 @@
               <p class="text-muted">Zenphone music player</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -158,8 +159,8 @@
               <h4>Multimedia Application</h4>
               <p class="text-muted">Zenphone systyem apps</p>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          </div>-->
+          <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -625,31 +626,49 @@
               <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">OneTalk Music Remote</h2>
-                  <p class="item-intro text-muted">OneTalk A.I. technology could understand what your command is, and play the requested and recommended music video for you. With OneTalk, your phone will be upgraded like a “Smart Speaker”!</p>
+                  <h2 class="text-uppercase">OneTalk Bot</h2>
+                  <p class="item-intro text-muted">OneTalk Bot includes three different chatbots service. Our goal is to explore various service possibilities through conversational user interface, provide delightful and friendly experience for engaging more of our users.</p>
                   <ul class="list-inline">
-                    <li>Role：Product Management | UX Design | UI Design | </li>
+                    <li>Role：UX Design | UI Design | </li>
                     <li>Type：Android & iOS Application</li>
                     <li>Award：Google Play The Most Innovative App of 2017</li>
                     <li><a href="https://goo.gl/eyRL2Z">Try it on Google Play Store</a></li>
                   </ul>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full-3.png" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-chatbot overview.png" alt="">
+                  <h3>Mr.Otter</h3>
+                  <p>When users first entering OneTalk, they will meet Mr. Otter. The purpose of this chatbot is to provide tutorials and customer supports. Users can talk to Mr.Otter and test the voice recognition. We also used Wizard of Oz method to chat with users and learn from users. </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-otter screenshot.png" alt="">
+                  <h5>Insights from the chat Log</h5>
+                  <p>Looking at chat log can better understand our users. It also helped us design better interaction through conversational user interface.</p>
+                  <h5>Say hi to your users</h5>
+                  <p>To make a good first impression with users, say Hi to users is an critical step. Randomized the ways to say Hi can also engage them more. Because most users like to keep poking the bot and just for fun.</p>
+                  <h5>Always response the user</h5>
+                  <p>Users hate to be ignored. As long as users get response, it’s better than nothing. Even though the bot cannot satisfy the user needs, say sorry or provide further contact info will be helpful.</p>
+                  <h5>Bot abuse</h5>
+                  <p>Users say something bad to the bot is pretty common. List out the bad words and teach the bot to reply politely can alleviate the negative interaction.</p>
+                  <h5>Valuable thoughts from Target Users</h5>
+                  <p>Most of our target users are teenagers, it was hard to know their thoughts without talking to them privately. We used the channel from Mr.Otter to have a deeper interview with them. We’ve learned how they interact with friends by messaging, popular YouTuber among their generations and the most used social media. All these information helped us to promote OneTalk on the marketing.</p>
                   <br>
-                  <h3>Why Music Remote?</h3>
+                  <h3>Magic DJ</h3>
+                  <p>Since people listen and watch music video a lot on YouTube nowaday, we built a MagicDJ for optimizing experience with YouTube. After requesting music from MagicDJ, it pop-up a floating windows on the screen(Android phone) even you leave OneTalk app. MagicDJ also recommends playlist proactively through conversational user interface. This feature was highly praised from our users, however, we want to try more possibility. Therefore, Music Remote feature was borned.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-dj screenshot.png" alt="">
+                  <h5>MagicDJ + ChatBubbles + AI = Music Remote</h5>
+                  <p>We have built MagicDJ and Chat Bubbles on OneTalk, what if we can send commands from all different instant messengers to control Magic DJ?</p>
+                  <h5>Why Music Remote</h5>
                   <ul class="list-inline">
-                    <li>1. Got old phone and don't know what to do with it?</li>
-                    <li>2. Friends and family always want to request the music in house party?</li>
-                    <li>3. It's hard to force everyone download the same app to control music.</li>
-                    <li>4. No extra money to buy expensive voice control device such as Echo.</li>
-                    <li>5. DJ Chatbot underdstand your message commands.</li>
+                    <li>1. Music Remote can transform your (spare) phone into a smart speaker.</li>
+                    <li>2. People can remote control music at a party from their instant messengers without installing OneTalk.</li>
+                    <li>3. You can save money from buying other voice control device such as Echo. </li>
+                    <li>4. MagicDJ learns from your commands and preferences.</li>
                   </ul>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02_use case.png" alt="">
+                  <br>
                   <div class="embed-responsive embed-responsive-16by9">
                     <iframe src="https://www.youtube.com/embed/rI0r0cLVJpg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                   </div>
-                  <br>
-                  <br>
-                  <h3>Process</h3>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02_use case.png" alt="">
+                  <h3>Sweet Wombat</h3>
+                  <p>Since people listen and watch music video a lot on YouTube nowaday, we built a MagicDJ for optimizing experience with YouTube. After requesting music from MagicDJ, it pop-up a floating windows on the screen(Android phone) even you leave OneTalk app. MagicDJ also recommends playlist proactively through conversational user interface. This feature was highly praised from our users, however, we want to try more possibility. Therefore, Music Remote feature was borned.</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-dj screenshot.png" alt="">
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
