add asus/hk projects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>WeiRu</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -128,7 +128,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>ASUS ZenUI</h4>
-              <p class="text-muted">Zenphone Multimedia Apps</p>
+              <p class="text-muted">ZenFone Multimedia Apps</p>
             </div>
           </div>
           <!--
@@ -694,20 +694,42 @@
               <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">ASUS MiniMovie</h2>
-                  <p class="item-intro text-muted">MicroFilm is an easy video & slideshow editing tool. By selecting different themes and customized background music user can create a stylish movie.</p>
+                  <h2 class="text-uppercase">ASUS ZenUI - ZenFone Multimedia Apps</h2>
+                  <p class="item-intro text-muted">ZenUI is the system user interface designed specifically for ZenFone. Including various essential multimedia apps for ZenFone users to experience consistent and seamless services.</p>
                   <ul class="list-inline">
                   <li>Role: Planning | Researching | Wireframing | Prototyping | Testing</li>
-                  <li>Type：Android Application</li>
-                  <li><a href="https://goo.gl/UUvMwL">Try it on Google Play Store
-                  </a></li>
+                  <li>Type: ZenFone system applications | Android applications</li>
+                  <li>Projects: MiniMovie | Music | Gallery | Voice Recording | FM Radio | System Settings</li>
                   </ul>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-1-intro.png" alt="">
+
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-icons.png" alt="">
+                  <h3>Background</h3>
+                  <p>ZenUI is the system user interface designed for ZenFone. Before ZenFone1 was borned, ASUS design center decided to create their own user interface since there was no standard design guideline for android phone back in 2013. I was involved in the this plan and focusing on planning and designing the essential multimedia applications for ZenFone.</p>
+
+                  <h3>Challanges</h3>
+                  <p>Timing: Before ZenFone launched, there was only two to three months for building new application from zero to release. </p>
+                  <p>Integration: We hoped to support most cloud storage services, home storage services (such as NAS) to make people easily access their multimedia files. Supporting arious streaming technology was also important for multimedia apps. Integrating these features in the user flow and make the users feel non-hessle was the main design goal. </p>
+                  <p>Communication: Not like designing an independent application, all the interactions of ZenFone apps needs to be consistent. Different app designers will need to cooperate tightly and efficiently to make this happened.</p>
+
+                  <h3>ASUS Music</h3>
+                  <p>ASUS Music allows users to access to music files on cloud resource easily, also provides lyrics and streaming features.</p>
+                  <p><a href="https://goo.gl/UUvMwL">XXXX Downloads with 4.6 Stars</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-2-select.png" alt="">
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-3-add music.png" alt="">
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-9-select music.png" alt="">
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-4-edit.png" alt="">
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-5-edit2.png" alt="">
+
+                  <h3>ASUS MicroFilm</h3>
+                  <p>To better promote new ZenFone camera, MicroFilm was build for creating photo videos. By selecting different themes and customized background music, user can create a stylish slideshow movie.</p>
+                  <p><a href="https://goo.gl/UUvMwL">XXXX Downloads with 4.6 Stars</a></p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-microfilm.png" alt="">
+
+                  <h3>ASUS Gallery</h3>
+                  <p>Gallery provides photo viewing and advanced editing to make photo sharing more fun!</p>
+                  <p><a href="https://goo.gl/UUvMwL">XXXX Downloads with 4.6 Stars</a></p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-gallery.png" alt="">
+
+                  <h3>Iterations - Voice recording/ FM Radio/ Music Player</h3>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-iterations2.png" alt="">
+
+                  <p>Easy access to all music resource also provide customized lyrics </p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -803,10 +825,32 @@
                   <p class="item-intro text-muted">Harman Kardon remote is a mobile application to control  Harman Kardon audio products. Main features including "Device Control" , "Music Streaming" and "Music Player".</p>
                   <ul class="list-inline">
                   <li>Role: UX/ UI Design</li>
-                  <li>Type：Android Application</li>
+                  <li>Type：iOS/Android Application</li>
                   <li><a href="https://goo.gl/UUvMwL">Try it on Google Play Store
                   </a></li>
                   </ul>
+
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-intro.png" alt="">
+
+                  <h3>Background</h3>
+                  <p>Harman Kardon manufactures home audio system, back in 2012, since smart phone had become more popular on the market, supporting remote control and streaming services from mobile phone was a must. Harman Kardon UI/UX design team started to create this application to control all existing products in the app.
+                  
+                  <h3>Challenge</h3>
+                  <p>High complexity: Desingers needed to dive deeply for the technology of all audio products, including researching and defining interactions for more than 10 Harman Kardon products. <br>
+                  Integration: Other than remote control, also designed a full funtion music player integrating into the application. How to integrate all different setup process and make the navigation easy to understand was a challange. </p>
+                  
+                  <h3>User Flow </h3>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-flow.png" alt="">
+
+                  <h3>Audio Product Remote Control</h3> 
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-remote control.png" alt="">
+
+                  <h3>Various Device Music Streaming</h3>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-streaming.png" alt="">
+
+                  <h3>Integrated Music Player</h3> 
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-music player.png" alt="">
+
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
