--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <!-- Linda hide the following original code-->
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Wei-Ru Lay</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
+        <!--隱藏右上角的menu
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
         </button>
+        -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#services">Process</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
@@ -48,9 +53,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">Experience</a>
             </li>
             -->
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Process</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">About Me</a>
             </li>
@@ -78,9 +81,74 @@
     </header>
 
 
+<!-- Services -->
+    <section class="bg-white" id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Process</h2>
+            <h3 class="section-subheading text-muted">Work processes to deliver a product</h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-search fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Research</h4>
+            <p class="text-muted">Brand strategy<br>User stories<br>Competitor’s products<br>Heuristic interviews</p>
+          </div>
+          <div class="col-md-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Design</h4>
+            <p class="text-muted">Defining specifications<br>Sketching<br>Wireframing<br>Prototyping</p>
+          </div>
+          <div class="col-md-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Production</h4>
+              <p class="text-muted">Collaboration with developer<br>User testing<br>Quality assurance<br>Refinement</p>
+          </div>
+          <div class="col-md-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Analysis</h4>
+            <p class="text-muted">A/B testing<br>User behavior<br>Traffic analysis<br>Feedback consideration</p>
+          </div>
+          <!--
+          <div class="col-md-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Analyze</h4>
+            <p class="text-muted">A/B Testing<br>User behavior<br>Traffic Analysis</p>
+          </div>
+          <div class="col-md-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Maintain</h4>
+            <p class="text-muted">Data collecting<br>Feedbacks collecting<br>Redesign product<br>Version updating</p>
+          </div>
+          -->
+        </div>
+
+      </div>
+    </section>
+
 
     <!-- Portfolio Grid -->
-    <section class="bg-white" id="portfolio">
+    <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -90,8 +158,6 @@
         </div>
 
         <div class="row">
-
-
           <div class="col-md-6 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
@@ -271,70 +337,7 @@
     </section>
 	-->
 
-    <!-- Services -->
-    <section class="bg-light" id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Process</h2>
-            <h3 class="section-subheading text-muted">Work processes to deliver a product</h3>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-md-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-search fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Research</h4>
-            <p class="text-muted">Brand strategy<br>User stories<br>Competitor’s products<br>Heuristic interviews</p>
-          </div>
-          <div class="col-md-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Design</h4>
-            <p class="text-muted">Defining specifications<br>Sketching<br>Wireframing<br>Prototyping</p>
-          </div>
-          <div class="col-md-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Production</h4>
-              <p class="text-muted">Collaboration with developer<br>User testing<br>Quality assurance<br>Refinement</p>
-          </div>
-          <div class="col-md-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Analysis</h4>
-            <p class="text-muted">A/B testing<br>User behavior<br>Traffic analysis<br>Feedback consideration</p>
-          </div>
-          <!--
-          <div class="col-md-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Analyze</h4>
-            <p class="text-muted">A/B Testing<br>User behavior<br>Traffic Analysis</p>
-          </div>
-          <div class="col-md-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Maintain</h4>
-            <p class="text-muted">Data collecting<br>Feedbacks collecting<br>Redesign product<br>Version updating</p>
-          </div>
-          -->
-        </div>
-
-      </div>
-    </section>
+    
 
 
     <!-- Team -->
@@ -730,17 +733,17 @@
 
                   <h3>ASUS Music</h3>
                   <p>We built the ASUS Music application, which allowed users to easily access music files on cloud resource, also providing song lyrics and streaming features.</p>
-                  <p><a href="https://goo.gl/UUvMwL">XXXX Downloads with 4.6 Stars</a></p>
+                  <p><a href="https://goo.gl/pMYnmA">Try it on Google Play Store</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-2-select.png" alt="">
 
                   <h3>ASUS MicroFilm</h3>
                   <p>To better promote the new ZenFone camera, we were also asked to build the MicroFilm application for creating photo videos. By selecting different themes and customized background music, MicroFilm users could create stylish and immersive slideshow movies.</p>
-                  <p><a href="https://goo.gl/UUvMwL">XXXX Downloads with 4.6 Stars</a></p>
+                  <p><a href="https://goo.gl/5uy1zr">Try it on Google Play Store</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-microfilm.png" alt="">
 
                   <h3>ASUS Gallery</h3>
                   <p>We also needed to redesign and update the Gallery application to be consistent with the other new or redesigned ZenFone apps. Our redesigned Gallery provided photo photo viewing and advanced editing to make photo sharing more fun and engaging!</p>
-                  <p><a href="https://goo.gl/UUvMwL">XXXX Downloads with 4.6 Stars</a></p>
+                  <p><a href="https://goo.gl/5A39XK">Try it on Google Play Store</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-gallery.png" alt="">
 
                   <h3>Iterations - Voice Recording/ FM Radio/ Music Player</h3>
