update resume link

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 </li>
                 -->
                 <li class="list-inline-item">
-                  <a href="https://goo.gl/4SvKAW" target="blank">
+                  <a href="https://www.dropbox.com/s/vpwm1vt0xsjig4y/weirulay_resume_2018.pdf?dl=0" target="blank">
                     <i class="fa fa-address-card"></i>
                   </a>
                 </li>
