change portfolio thumbnails, add KikaGo process, css style

--- a/kikago.html
+++ b/kikago.html
@@ -86,11 +86,40 @@
                   <p>In the loud environments, such as inside a moving vehicle, a regular phone's microphone is less effective for voice control. Kika developed a noise-cancellation microphone built into a USB-charging cable to solve this problem. With Kika's cutting-edge AI engine, the KikaGo application created a truly hands-free means for communications inside a car environment that is also elegant and simple.</p>
                   <br>
                   <br>
-                  <h3>Challenges</h3>
+                  <h3>Challenges - Voice control only</h3>
                   <p>At the time of KikaGo’s development, there were no hands-free, in-car communications on the market. Unlike existing voice-assisted agents like Siri, KikaGo was designed specifically for voice interaction and hands-free communication so that users would be able to interact without seeing or touching the screen. Because of this, the design flow would need to be more abstract and difficult than the conventional user interface, which includes a visual component, and designers would need to spend more time testing the voice interaction, as opposed to the visual interaction design.</p>
-
+                  <br>
+                  <br>
+                  <h3>Starting from dialogs</h3>
+                  <br>
+                  <h5>What are the context in the conversation?</h5>
+                  <p>From creating dialogs scripts between users and bot,we could instantly see what we should build in the conversation and what corner issues might show up during the conversation.</p>
+                  <br>
+                  <img class="img-fluid d-block mx-400" src="img/portfolio/04-dialog example.png" alt="">
+                  <br>
+                  <br>
+                  <h5>How does KikaGo interact with users by talking?</h5>
+                  <p>Transforming the dialogs scripts into a logical conversational user flow could easily help us to map every steps in the conversation. We created the user flow specifically for voice user interface, separating the visual interaction wireframes and conversation logic.</p>
+                  <br>
+                  <img class="img-fluid d-block mx-400" src="img/portfolio/04-navigation flow.jpg" alt="">
+                  <br>
+                  <br>
+                  <h3>Designing for drivers</h3>
+                  <br>
+                  <h5>Wireframing for the conversational interaction on the screen</h5>
+                  <p>After creating the conversation flow, we map the conversations by wireframes. We could imagine how drivers will perceive and which information should be display on the screen.</p>
+                  <br>
+                  <img class="img-fluid d-block mx-400" src="img/portfolio/04-wireframe.png" alt="">
+                  <br>
+                  <br>
+                  <h5>Final design</h5>
+                  <p>For the UI design, we need to consider larger font, icons, darker background, and only show the key information. These designs could be much safer than applying the regular mobile interface while driving.</p>
+                  <br>
                   <img class="img-fluid d-block mx-400" src="img/portfolio/kika_app feature.png" alt="">
                   <br>
+                  <br>
+                  <br>
+                  <h3>How KikaGo works in the real world?</h3>
                   <br>
                   <div class="embed-responsive embed-responsive-16by9">
                   <iframe src="https://player.vimeo.com/video/249897026" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
