--- a/kikago.html
+++ b/kikago.html
@@ -95,7 +95,7 @@
                   <h5>What are the context in the conversation?</h5>
                   <p>From creating dialogs scripts between users and bot,we could instantly see what we should build in the conversation and what corner issues might show up during the conversation.</p>
                   <br>
-                  <img class="img-fluid d-block mx-400" src="img/portfolio/04-dialog example.png" alt="">
+                  <img class="img-fluid d-block mx-400" src="img/portfolio/04-dialog_example.png" alt="">
                   <br>
                   <br>
                   <h5>How does KikaGo interact with users by talking?</h5>
