--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <!-- Linda hide the following original code-->
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Ru</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
         <!--隱藏右上角的menu
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -89,17 +89,20 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted">I have six years of experience as a UX designer focusing on mobile applications, from initial ideation to final award-winning product. I have worked in a variety of settings, from large tech companies with over 50 million users to brand-new startups.</h3>
+            <br>
+            <br>
+            <!--
+            <h3 class="section-subheading text-muted">I have six years of experience as a UX designer focusing on mobile applications, from initial ideation to final award-winning product. I have worked in a variety of settings, from large tech companies with over 50 million users to brand-new startups.</h3>-->
           </div>
         </div>
 
         <div class="row">
-          
+
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" href="kikago.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fa fa-lightbulb-o fa-3x"></i>
+                  <!--<i class="fa fa-lightbulb-o fa-3x"></i>-->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/04-thumbnail.png" alt="">
@@ -115,7 +118,7 @@
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                    <!--可在下面這邊修改hover後中間的符號fa-lightbulb的樣式，後面都一樣，檔案在font-awesome.css裡-->
-                  <i class="fa fa-lightbulb-o fa-3x"></i>
+                  <!--<i class="fa fa-lightbulb-o fa-3x"></i>-->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="">
@@ -130,7 +133,7 @@
             <a class="portfolio-link" href="onetalk_bot.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fa fa-lightbulb-o fa-3x"></i>
+                  <!--<i class="fa fa-lightbulb-o fa-3x"></i>-->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="">
@@ -145,7 +148,7 @@
             <a class="portfolio-link" href="asus.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fa fa-lightbulb-o fa-3x"></i>
+                  <!--<i class="fa fa-lightbulb-o fa-3x"></i>-->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="">
@@ -160,7 +163,7 @@
             <a class="portfolio-link" href="hk.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fa fa-lightbulb-o fa-3x"></i>
+                  <!--<i class="fa fa-lightbulb-o fa-3x"></i>-->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/06-thumbnail.png" alt="">
@@ -175,7 +178,7 @@
             <a class="portfolio-link" href="kidzeye.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
-                  <i class="fa fa-lightbulb-o fa-3x"></i>
+                  <!--<i class="fa fa-lightbulb-o fa-3x"></i>-->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/05-thumbnail.png" alt="">
