--- a/onetalk_bot.html
+++ b/onetalk_bot.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <!-- Linda hide the following original code-->
-        <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">Ru</a>
+        <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">Home</a>
         <!--隱藏右上角的menu
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
